
[package]
name = "arduino-nano-examples"
version = "0.0.0"
authors = ["David R. Morrison <drmorr@evokewonder.com>"]
edition = "2018"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal.git"
rev = "e72faada6bb7f67990216525aeb2132bbb3d53e9"
features = ["nano168"]

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"